# acg_project

./: CMakeLists.txt
assets/: barrels.mtl  column-damaged.mtl  cube.mtl  detail-crate-ropes.mtl  materials.mtl  pulley-crate.mtl  pulley.mtl  roof-corner.mtl  roof-edge.mtl  roof-high-side-corner-inner.mtl  roof-side-corner-inner.mtl  roof-side.mtl  stairs-stone.mtl  tower-edge.mtl  tower-paint.mtl  tower-top.mtl  tree-shrub.mtl  wall-door.mtl  wall-fortified-door.mtl  wall-fortified-half.mtl  wall-fortified-paint-door.mtl  wall-fortified-paint-gate.mtl  wall-fortified-paint.mtl  wall-paint-detail.mtl  wall-paint-door.mtl  wall-paint-flat.mtl  wall-paint-gate.mtl  wall-pane-door.mtl  wall-pane-paint-door.mtl  wall-pane-paint.mtl  wall-pane-painted-wood-door.mtl  wall-pane-painted-wood.mtl  wall-pane-window.mtl  wall-pane-wood-door.mtl  wall-pane-wood.mtl  wall-pane.mtl  water.mtl  water.mtl:Zone.Identifier
assets/antonius/: Antonius_C.mtl
assets/pegasus/: pegasus.mtl
assets/rossbaendiger/: Rossbaendiger_C.mtl
shaders/: csm_shading.frag  csm_shading.vert  default.frag  default.vert  depth.frag  depth.vert  gbuffer.frag  gbuffer.vert  normal.frag  normal.vert  quad_combine.frag  simple.frag  simple.vert  ssr.frag  ssr.vert
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  TextureManager.cpp  TextureManager.h  Utils.h  csm.cpp  csm.h  main.cpp
